--- a/projeto_crioulas/templates/historia/index.html
+++ b/projeto_crioulas/templates/historia/index.html
@@ -1,37 +1,26 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>História - Crioulas FC</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Oswald:wght@300;400;700&display=swap" rel="stylesheet">
-    
+
+{% block title %}História - Crioulas FC{% endblock %}
+
+{% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/style_historia.css' %}">
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
 
     <div class="page-container">
         
-        <div class="logo-corner">
-            <a href="/">CRIOULAS <span>FC</span></a>
-        </div>
-
-        <nav class="top-nav">
-            <a href="{% url 'historia:index' %}" class="active">HISTÓRIA</a>
-            
-            <a href="{% url 'galeria:index'%}">GALERIA</a> 
-            <a href="#">CONTATO</a>
-        </nav>
-
         <div class="side-bar">
             <span>PROJETOS SOCIAIS</span>
             <span>PARCEIROS</span>
         </div>
 
         <main class="content-split">
-            <div class="left-image"></div> <div class="right-content">
+            
+            <div class="left-image"></div> 
+            
+            <div class="right-content">
                 <h2 class="section-title">A HISTÓRIA DAS <br> <span class="highlight">CRIOULAS</span></h2>
 
                 <div class="scrollable-text-box">
@@ -46,10 +35,9 @@
                         <strong>As Cores</strong><br>
                         O Roxo e o Rosa não são apenas estética; representam a luta feminista e a vitalidade da mulher quilombola.
                     </p>
-                </div>
+                    </div>
             </div>
         </main>
     </div>
 
-</body>
-</html>
+{% endblock %}
