--- a/projeto_crioulas/static/css/style_home.css
+++ b/projeto_crioulas/static/css/style_home.css
@@ -193,7 +193,11 @@ body {
     font-size: 0.9rem;
     cursor: pointer;
     transition: all 0.5s ease 0.1s;
+
+}
+.play-btn a{
     text-decoration: none;
+    color: #fff;
 }
 
 .play-btn:hover{
